--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -26,7 +25,7 @@
 
     <groupId>com.github.s4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>maven-plugin</packaging>
 
     <name>Maven Sitemap generator plugin</name>
@@ -54,7 +53,7 @@
         <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin.git</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>sitemapxml-maven-plugin-1.0.0</tag>
     </scm>
 
     <distributionManagement>
