--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.github.s4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Maven Sitemap generator plugin</name>
@@ -53,7 +53,7 @@
         <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin.git</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
-        <tag>sitemapxml-maven-plugin-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
