--- a/pom.xml
+++ b/pom.xml
@@ -140,10 +140,22 @@
                             <goal>descriptor</goal>
                         </goals>
                     </execution>
-                    <execution>
+                    <!--execution>
                         <id>generated-helpmojo</id>
                         <goals>
                             <goal>helpmojo</goal>
+                        </goals>
+                    </execution -->
+                </executions>
+            </plugin>
+            <plugin>
+                <!-- workaround for: http://jira.codehaus.org/browse/MPLUGIN-262 -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>templating-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>filter-sources</goal>
                         </goals>
                     </execution>
                 </executions>
