--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,42 @@
 language: java
+
+# turn shallow clone off for sonar
+git:
+  depth: false
+
+addons:
+  sonarcloud:
+    organization: "simplify4u"
+
+install:
+  - mkdir -p ../utils
+  - curl -Ls https://github.com/s4u/travis/archive/master.tar.gz |
+    tar -zx --strip-components 2 -C ../utils travis-master/src
+
+matrix:
+  include:
+
+    - jdk: openjdk8
+      script:
+        - ../utils/mvn-push.sh clean verify sonar:sonar
+        - ../utils/mvn-pr.sh   clean verify
+        - ../utils/mvn-tag.sh  site
+
+    - jdk: openjdk11
+      script:
+        - ../utils/mvn-run.sh clean verify
+
+deploy:
+  provider: script
+  script: bash -c "echo ok"
+  skip_cleanup: true
+  on:
+    tags: true
+    jdk: openjdk8
+
+cache:
+  directories:
+    - $HOME/.m2/repository
+
+before_cache:
+  - rm -rfv $HOME/.m2/repository/org/simplify4u/plugins/sitemapxml-maven-plugin*
