--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!--
-  ~ Copyright 2013 Slawomir Jaranowski
+  ~ Copyright 2019 Slawomir Jaranowski
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -19,13 +19,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.s4u</groupId>
+        <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>2.4.1</version>
         <relativePath />
     </parent>
 
-    <groupId>com.github.s4u.plugins</groupId>
+    <groupId>org.simplify4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
@@ -65,7 +65,7 @@
     </distributionManagement>
 
     <properties>
-        <maven.version>3.0.4</maven.version>
+        <maven.version>3.5.0</maven.version>
     </properties>
 
     <prerequisites>
@@ -89,18 +89,53 @@
             <dependency>
                 <groupId>org.apache.maven.plugin-tools</groupId>
                 <artifactId>maven-plugin-annotations</artifactId>
-                <version>3.2</version>
+                <version>3.6.0</version>
             </dependency>
+
+            <!-- testing -->
+            <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-compat</artifactId>
+                <version>${maven.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.maven.plugin-testing</groupId>
+                <artifactId>maven-plugin-testing-harness</artifactId>
+                <version>3.3.0</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+            </dependency>
+
             <!-- dependency coverage -->
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-artifact</artifactId>
                 <version>${maven.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-utils</artifactId>
-                <version>2.0.6</version>
+                <version>3.0.24</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-component-annotations</artifactId>
+                <version>1.7.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>20.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -121,9 +156,27 @@
             <artifactId>maven-plugin-annotations</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugin-testing</groupId>
+            <artifactId>maven-plugin-testing-harness</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -139,22 +192,10 @@
                             <goal>descriptor</goal>
                         </goals>
                     </execution>
-                    <!--execution>
+                    <execution>
                         <id>generated-helpmojo</id>
                         <goals>
                             <goal>helpmojo</goal>
-                        </goals>
-                    </execution -->
-                </executions>
-            </plugin>
-            <plugin>
-                <!-- workaround for: http://jira.codehaus.org/browse/MPLUGIN-262 -->
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>templating-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>filter-sources</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -174,13 +215,12 @@
                 <reportSets>
                     <reportSet>
                         <reports>
-                            <report>cim</report>
+                            <report>ci-management</report>
                             <report>dependencies</report>
-                            <report>dependency-convergence</report>
-                            <report>issue-tracking</report>
-                            <report>license</report>
+                            <report>issue-management</report>
+                            <report>licenses</report>
                             <report>plugins</report>
-                            <report>project-team</report>
+                            <report>team</report>
                             <report>scm</report>
                             <report>summary</report>
                         </reports>
