--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.4.2-SNAPSHOT</version>
         <relativePath />
     </parent>
 
