--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 jobs:
   include:
 
-    - name: "buid on main repo - jdk8"
+    - name: "jdk8"
       jdk: openjdk8
       script:
         - ../utils/mvn-push.sh    clean deploy
@@ -28,14 +28,14 @@ jobs:
         - ../utils/mvn-sonar.sh   sonar:sonar
       if: repo = "s4u/sitemapxml-maven-plugin"
 
-    - name: "build on forks - jdk8"
+    - name: "jdk8 - forks"
       jdk: openjdk8
       script:
         - ../utils/mvn-run.sh     clean verify
       if: repo != "s4u/sitemapxml-maven-plugin"
 
     - name: "jdk11"
-    - jdk: openjdk11
+      jdk: openjdk11
       script:
         - ../utils/mvn-run.sh     clean verify
 
