--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,19 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
         <version>2.4.2</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <groupId>org.simplify4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <packaging>maven-plugin</packaging>
 
     <name>Maven Sitemap generator plugin</name>
@@ -58,7 +57,7 @@
         <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin.git</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>sitemapxml-maven-plugin-2.0.1</tag>
     </scm>
 
     <distributionManagement>
