--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,14 @@
+version: ~> 1.0
 language: java
 
-# turn shallow clone off for sonar
-git:
-  depth: false
+env:
+  global:
+    - M2_CACHE_CLEAN_DIR: "org/simplify4u/plugins/sitemapxml-maven-plugin*"
+    - SONAR_ORG: "simplify4u"
+    - MY_REPO: "s4u/sitemapxml-maven-plugin"
 
-addons:
-  sonarcloud:
-    organization: "simplify4u"
-
-install:
-  - mkdir -p ../utils
-  - curl -Ls https://github.com/s4u/travis/archive/master.tar.gz |
-    tar -zx --strip-components 2 -C ../utils travis-master/src
-
-before_script:
-  - ../utils/print-env.sh
-
-jobs:
-  include:
-
-    - name: "jdk8"
-      jdk: openjdk8
-      script:
-        - ../utils/mvn-push.sh    clean deploy
-        - ../utils/mvn-pr.sh      clean verify
-        - ../utils/mvn-tag.sh     clean verify site
-        - ../utils/mvn-sonar.sh   sonar:sonar
-      if: repo = "s4u/sitemapxml-maven-plugin"
-
-    - name: "jdk8 - forks"
-      jdk: openjdk8
-      script:
-        - ../utils/mvn-run.sh     clean verify
-      if: repo != "s4u/sitemapxml-maven-plugin"
-
-    - name: "jdk11"
-      jdk: openjdk11
-      script:
-        - ../utils/mvn-run.sh     clean verify
-
-deploy:
-  provider: pages
-  skip_cleanup: true
-  keep_history: true
-  github_token: $GITHUB_TOKEN
-  verbose: true
-  local_dir: target/site
-  on:
-    tags: true
-    repo: s4u/sitemapxml-maven-plugin
-    jdk: openjdk8
-
-cache:
-  directories:
-    - $HOME/.m2/repository
-
-before_cache:
-  - rm -rfv $HOME/.m2/repository/org/simplify4u/plugins/sitemapxml-maven-plugin*
+import:
+  - source: s4u/travis:install.yml@master
+  - source: s4u/travis:m2-cache.yml@master
+  - source: s4u/travis:standard-jobs.yml@master
+  - source: s4u/travis:deploy-ghpages.yml@master
