--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
         <version>2.6.1</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <groupId>org.simplify4u.plugins</groupId>
@@ -54,7 +54,7 @@
     </prerequisites>
 
     <scm>
-        <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin.git</connection>
+        <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
         <tag>HEAD</tag>
@@ -62,7 +62,7 @@
 
     <distributionManagement>
         <site>
-            <id>github-pages</id>
+            <id>github</id>
             <url>${project.scm.connection}</url>
         </site>
     </distributionManagement>
@@ -70,11 +70,24 @@
     <properties>
         <maven.version>3.5.0</maven.version>
         <pgp-keys-map.version>2020.08</pgp-keys-map.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <sitemapxml-maven-plugin.version>${project.version}</sitemapxml-maven-plugin.version>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-core</artifactId>
@@ -94,6 +107,12 @@
             </dependency>
 
             <!-- testing -->
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.18.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-compat</artifactId>
@@ -141,6 +160,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
         </dependency>
@@ -154,6 +178,18 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -182,17 +218,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <configuration>
-                    <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                </configuration>
                 <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
                     <execution>
                         <id>generated-helpmojo</id>
                         <goals>
@@ -215,7 +241,6 @@
                 <configuration>
                     <verifyPlugins>true</verifyPlugins>
                     <keysMapLocation>/pgp-keys-map.list</keysMapLocation>
-                    <strictNoSignature>true</strictNoSignature>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -236,6 +261,9 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
+                            <pomIncludes>
+                                <pomInclude>*/pom-test.xml</pomInclude>
+                            </pomIncludes>
                             <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
                             <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
                             <settingsFile>src/it/settings.xml</settingsFile>
