--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
         <groupId>org.simplify4u</groupId>
         <artifactId>parent</artifactId>
         <version>2.6.1</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <groupId>org.simplify4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
-    <version>2.1.0</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Maven Sitemap generator plugin</name>
@@ -57,7 +57,7 @@
         <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
-        <tag>v2.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
@@ -71,6 +71,7 @@
         <maven.version>3.5.0</maven.version>
         <pgp-keys-map.version>2020.08</pgp-keys-map.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <sitemapxml-maven-plugin.version>${project.version}</sitemapxml-maven-plugin.version>
     </properties>
 
 
