--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.simplify4u.plugins</groupId>
     <artifactId>sitemapxml-maven-plugin</artifactId>
-    <version>2.1.0</version>
+    <version>2.1.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Maven Sitemap generator plugin</name>
@@ -57,7 +57,7 @@
         <connection>scm:git:git@github.com:s4u/sitemapxml-maven-plugin</connection>
         <developerConnection>${project.scm.connection}</developerConnection>
         <url>https://github.com/s4u/sitemapxml-maven-plugin</url>
-        <tag>v2.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
