--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!--
-  ~ Copyright 2019 Slawomir Jaranowski
+  ~ Copyright 2019-2021 Slawomir Jaranowski
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -246,8 +246,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <verifyPlugins>true</verifyPlugins>
+                    <verifyPluginDependencies>true</verifyPluginDependencies>
                     <keysMapLocation>/pgp-keys-map.list</keysMapLocation>
+                    <quiet>true</quiet>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -275,6 +276,7 @@
                             <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
                             <settingsFile>src/it/settings.xml</settingsFile>
                             <showErrors>true</showErrors>
+                            <!--suppress UnresolvedMavenProperty -->
                             <mavenOpts>${argLine}</mavenOpts>
                         </configuration>
                     </execution>
